# Hardnessware

./: .env.example  .gitignore  LICENSE  README.md  install_workbench.bat  pyproject.toml  start_backend.bat  start_frontend.bat
app/: __init__.py  main.py  workbench.py
docs/: cost_optimized_routing.md  hardness_baseline_v1_approved.md  hardness_phase1_spec.md  hardness_round10_workbench_mvp.md  hardness_round2_1_root_cause.md  hardness_round2_metrics.json  hardness_round2_operational_decision.md  hardness_round2_validation_report.md  hardness_round3_premium_comparison.md  hardness_round3_sonnet_metrics.json  hardness_round4_escalation_policy.md  hardness_round4_hybrid_metrics.json  hardness_round4_hybrid_report.md  hardness_round5_phaseA_metrics.json  hardness_round5_phaseA_metrics_partial.json  hardness_round5_phaseA_metrics_quick.json  hardness_round5_phaseA_report.md  hardness_round5_phaseB_metrics.json  hardness_round5_phaseB_protocol.md  hardness_round5_phaseB_report.md  hardness_round6_opportunistic_metrics.json  hardness_round6_opportunistic_metrics_quick.json  hardness_round6_opportunistic_metrics_subset.json  hardness_round6_opportunistic_report.md  hardness_round7_roi_metrics.json  hardness_round7_roi_metrics_quick.json  hardness_round7_roi_metrics_subset.json  hardness_round7_roi_protocol.md  hardness_round7_roi_report.md  hardness_round8_1_finalization_cases.md  hardness_round8_1_metrics.json  hardness_round8_1_report.md  hardness_round8_2_metrics.json  hardness_round8_2_protocol.md  hardness_round8_2_report.md  hardness_round8_metrics.json  (+12 more)
(+45 files in other folders)
